feat(translations): go back and add missing translations into .json files

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -50,7 +50,10 @@
       "myClients": "&My Clients",
       "allClients": "&All Clients",
       "showArchived": "&Show Archived",
-      "noVisits": "&No Visits"
+      "noVisits": "&No Visits",
+      "noPriorityClients": "&No Priority Clients Found",
+      "noOutstandingReferrals": "&No Outstanding Referrals Found",
+      "newInboxMessages": "&You have <1>{{count}}</1> new messages in your inbox"
     },
     "disabilities": {
       "amputee": "&Amputee",
@@ -75,7 +78,9 @@
       "editClient": "&Edit Client",
       "viewClient": "&View Client",
       "discardNew": "&Discard new client?",
-      "picture": "&Client's picture"
+      "picture": "&Client's picture",
+      "riskLevels": "&Risk Levels",
+      "seeRiskHistory": "&See Risk History"
     },
     "surveyAttr": {
       "baselineSurvey": "&Baseline Survey",
@@ -84,7 +89,7 @@
     "visitAttr": {
       "newVisit": "&New Visit",
       "visitVerb": "&visits",
-      "visitLocation": "&visit in {{body}}",
+      "visitLocation": "-<1>Visit</1> in {{body}}",
       "date": "&Visit Date",
       "newVisitSurvey": "&New Visit Survey"
     },
@@ -93,6 +98,7 @@
       "update_education": "&Update Education Risk",
       "update_social": "&Update Social Risk",
       "update_nutrition": "&Update Nutrition Risk",
+      "update_mental": "&Update Mental Risk",
       "updateFailureAlert": "&Encountered an error while trying to update the client's risk"
     },
     "general": {
@@ -172,10 +178,27 @@
       "requestTokenFailureInvalid": "&Request token failure: the access and/or refresh token(s) received were invalid.",
       "create": "&CREATE",
       "no": "&No",
-      "yes": "&Yes"
+      "yes": "&Yes",
+      "disable": "&Disable",
+      "activate": "&Activate",
+      "users": "&Users",
+      "zones": "&Zones",
+      "referral": "&Referral",
+      "pending": "&Pending",
+      "unknown": "&Unknown",
+      "goBack": "&Go Back",
+      "when": "&When",
+      "lastVisit": "&Last Visit",
+      "previousStep": "&Previous Step",
+      "nextStep": "&Next Step"
   },
     "alert": {
       "generalFailure": "&Something went Wrong",
+      "generalFailureTryAgain": "&Something went wrong. Please go back and try again.",
+      "loadClientFailure": "&Something went wrong loading that client. Please try again.",
+      "loadUserFailure": "&Something went wrong trying to load that user. Please go back and try again.",
+      "editUserFailure": "&Something went wrong trying to edit that user. Please try again.",
+      "editUserPasswordFailure": "&Error occurred when trying to change the user's password",
       "DeleteAlertWithSubject": "&Delete Alert with Subject: {{subject}}",
       "messageAlert": "&You have {{count}} new messages in your inbox.",
       "unauthorizedArchive": "&You are not authorized to archive/dearchive clients. Please ask an administrator.",
@@ -191,7 +214,10 @@
       "newVersionAvailability": "&A new version of the HHA CBR app is available on the Google Play Store. Please update your app now, or you will be unable to sync.",
       "reinstallingSuggestion": "&If you have the latest version of the app and still see this message, then try uninstalling and reinstalling the app.",
       "logoutNotice": "&Are you sure you want to logout?",
-      "actionConfirmationNotice": "&Are you sure you want to {{action}} this {{object}}?"
+      "actionConfirmationNotice": "&Are you sure you want to {{action}} this {{object}}?",
+      "loadingPriorityClientsError": "&Error loading priority clients",
+      "loadingReferralsError": "&Error loading referrals",
+      "submitReferralError": "&An error occurred when submitting the referral"
     },
     "admin": {
       "username": "&Username",
@@ -209,7 +235,8 @@
       "searchBy": "&Search by",
       "notApplicable": "&N/A",
       "name": "&Name",
-      "selectAColumn": "&Select a column"
+      "selectAColumn": "&Select a column",
+      "noUsersFound": "&No Users Found"
     },
     "alerts": {
       "subject": "&Subject",
@@ -282,6 +309,7 @@
       "zone": "&Zone",
       "phoneNumber": "&Phone Number",
       "interviewConsent": "&Consent to Interview?",
+      "caregiverDetails": "&Caregiver Details",
       "caregiverPresent": "&Caregiver Present?",
       "caregiverPhone": "&Caregiver Phone Number",
       "caregiverName": "&Caregiver Name",
@@ -351,6 +379,8 @@
       "hipWidth": "&Hip Width",
       "wheelchairOwned": "&Client Owns a Wheelchair",
       "wheelchairRepairable": "&Client's Wheelchair is Repairable",
+      "attachWheelchairPhoto": "&Attach a photo of the wheelchair if possible",
+      "bringWheelchair": "&Please bring wheelchair to the center",
       "physiotherapy": "&Physiotherapy",
       "condition": "&Condition",
       "conditionOther": "&Other Condition",
@@ -363,7 +393,9 @@
       "mentalHealthCondition": "&Mental Condition",
       "mentalConditionOther": "&Other Mental Condition",
       "emergencyFoodAidRequired": "&Emergency Food Aid",
+      "emergencyFoodAidIsRequired": "&Emergency Food Aid Required",
       "agricultureLivelihoodProgramEnrollment": "&Agriculture Livelihood Program Enrollment",
+      "agricultureLivelihoodProgramEnrollmentRequired": "&Agriculture Livelihood Program Enrollment Required",
       "servicesOther": "&Other Services",
       "otherDescription": "&Service Description",
       "referralOther": "&Other referral",
@@ -409,22 +441,42 @@
       "whatDoesClientNeed": "&What does the client need?",
       "selectMentalHealthReferral": "&Please select mental health referral",
       "describeReferral": "&Please describe the referral",
-      "discardNewReferral": "&Discard this new referral?"
+      "discardNewReferral": "&Discard this new referral?",
+      "wheelchairVisit": "&Wheelchair Visit",
+      "physiotherapyVisit": "&Physiotherapy Visit",
+      "prostheticVisit": "&Prosthetic Visit",
+      "orthoticVisit": "&Orthotic Visit",
+      "hhaNutritionAndAgricultureProjectVisit": "&HHA Nutrition/Agriculture Project Visit",
+      "mentalHealthVisit": "&Mental Health Visit",
+      "otherServiceVisit": "&Other Services Visit"
     },
     "risks": {
       "riskLevel": "&Risk Level",
       "requirements": "&Requirements",
       "goals": "&Goals",
       "riskUpdateError": "&Encountered an error while trying to update the client's risk",
+
       "low": "&Low",
       "medium": "&Medium",
       "high": "&High",
       "critical": "&Critical",
+
       "health": "&Health",
       "education": "&Education",
       "social": "&Social",
       "nutrition": "&Nutrition",
-      "mental": "&Mental Health"
+      "mental": "&Mental Health",
+
+      "healthSet": "&Health risk set to",
+      "healthChanged": "&Health risk changed to",
+      "educationSet": "&Education risk set to",
+      "educationChanged": "&Education risk changed to",
+      "socialSet": "&Social risk set to",
+      "socialChanged": "&Social risk changed to",
+      "nutritionSet": "&Nutrition risk set to",
+      "nutritionChanged": "&Nutrition risk changed to",
+      "mentalSet": "&Mental health risk set to",
+      "mentalChanged": "&Mental health risk changed to"
     },
     "riskLevelsAbbreviated": {
       "low": "&LO",
@@ -547,7 +599,19 @@
       "synchronization": "&Synchronization",
       "inbox": "&Inbox",
       "switchTargetServer": "&Switch Target Server",
-      "clientID": "&Client ID"
+      "clientID": "&Client ID",
+      "clientList": "&Client List",
+      "clientRiskHistory": "&Client Risk History",
+      "addVisit": "&Add a Visit",
+      "addSurvey": "&Add a Survey",
+      "addReferral": "&Add a Referral",
+      "profile": "&Profile",
+      "stats": "&Stats",
+      "editUserPass": "&Edit User Password",
+      "newZone": "&New Zone",
+      "editZone": "&Edit Zone",
+      "newAlert": "&New Alert",
+      "notFound": "&Not Found"
     },
     "statistics": {
       "statistics": "&Statistics",
