fix(translations): fix typo

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -444,7 +444,7 @@
         "selectMentalHealthReferral": "-Please select mental health referral",
         "describeReferral": "-Please describe the referral",
         "discardNewReferral": "-Discard this new referral?",
-        "wheelchairVisit": "-Wheelchair asdaVisit",
+        "wheelchairVisit": "-Wheelchair Visit",
         "physiotherapyVisit": "-Physiotherapy Visit",
         "prostheticVisit": "-Prosthetic Visit",
         "orthoticVisit": "-Orthotic Visit",
