fix(translations): Address review comments
- only show unread message count if > 0
- use Trans component for risk entry summaries
- translate risk history chart tooltip message
- facilitate code reuse
- translate sidebar icon tooltip messages
- remove translation strings that are no longer needed
- add plural and singular translation for new inbox messages

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -53,8 +53,8 @@
       "noVisits": "&No Visits",
       "noPriorityClients": "&No Priority Clients Found",
       "noOutstandingReferrals": "&No Outstanding Referrals Found",
-      "newInboxMessages": "&You have <1>{{count}}</1> new messages in your inbox"
-    },
+      "newInboxMessages": "&You have <1>1</1> new message in your inbox",
+      "newInboxMessages_plural": "&You have <1>{{count}}</1> new messages in your inbox"    },
     "disabilities": {
       "amputee": "&Amputee",
       "polio": "&Polio",
@@ -467,16 +467,16 @@
       "nutrition": "&Nutrition",
       "mental": "&Mental Health",
 
-      "healthSet": "&Health risk set to",
-      "healthChanged": "&Health risk changed to",
-      "educationSet": "&Education risk set to",
-      "educationChanged": "&Education risk changed to",
-      "socialSet": "&Social risk set to",
-      "socialChanged": "&Social risk changed to",
-      "nutritionSet": "&Nutrition risk set to",
-      "nutritionChanged": "&Nutrition risk changed to",
-      "mentalSet": "&Mental health risk set to",
-      "mentalChanged": "&Mental health risk changed to"
+      "healthSet": "&<1>Health</1> risk set to",
+        "healthChanged": "&<1>Health</1> risk changed to",
+        "educationSet": "&<1>Education</1> risk set to",
+        "educationChanged": "&<1>Education</1> risk changed to",
+        "socialSet": "&<1>Social</1> risk set to",
+        "socialChanged": "&<1>Social</1> risk changed to",
+        "nutritionSet": "&<1>Nutrition</1> risk set to",
+        "nutritionChanged": "&<1>Nutrition</1> risk changed to",
+        "mentalSet": "&<1>Mental health</1> risk set to",
+        "mentalChanged": "&<1>Mental health</1> risk changed to"
     },
     "riskLevelsAbbreviated": {
       "low": "&LO",
@@ -602,11 +602,7 @@
       "clientID": "&Client ID",
       "clientList": "&Client List",
       "clientRiskHistory": "&Client Risk History",
-      "addVisit": "&Add a Visit",
-      "addSurvey": "&Add a Survey",
-      "addReferral": "&Add a Referral",
       "profile": "&Profile",
-      "stats": "&Stats",
       "editUserPass": "&Edit User Password",
       "newZone": "&New Zone",
       "editZone": "&Edit Zone",
