--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -190,7 +190,8 @@
       "when": "&When",
       "lastVisit": "&Last Visit",
       "previousStep": "&Previous Step",
-      "nextStep": "&Next Step"
+      "nextStep": "&Next Step",
+      "language": "&Language"
   },
     "alert": {
       "generalFailure": "&Something went Wrong",
