feat(new visit form): add translations

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -89,7 +89,7 @@
     "visitAttr": {
       "newVisit": "&New Visit",
       "visitVerb": "&visits",
-      "visitLocation": "-<1>Visit</1> in {{body}}",
+      "visitLocation": "&<1>Visit</1> in {{body}}",
       "date": "&Visit Date",
       "newVisitSurvey": "&New Visit Survey"
     },
@@ -218,7 +218,8 @@
       "actionConfirmationNotice": "&Are you sure you want to {{action}} this {{object}}?",
       "loadingPriorityClientsError": "&Error loading priority clients",
       "loadingReferralsError": "&Error loading referrals",
-      "submitReferralError": "&An error occurred when submitting the referral"
+      "submitReferralError": "&An error occurred when submitting the referral",
+      "submitVisitError": "&Error occurred trying to submit the visit"
     },
     "admin": {
       "username": "&Username",
@@ -587,7 +588,19 @@
       "visitFocus": "&Visit Focus",
       "visit": "&Visit",
       "discardNewVisit": "&Discard this new visit?",
-      "clients": "&Client's"
+      "clients": "&Client's",
+
+      "clientHealthGoal": "&Client's Health Goal",
+      "clientEducationGoal": "&Client's Education Goal",
+      "clientSocialGoal": "&Client's Social Goal",
+      "clientNutritionGoal": "&Client's Nutrition Goal",
+      "clientMentalHealthGoal": "&Client's Mental Health Goal",  
+
+      "clientHealthGoalStatus": "&Client's Health Goal Status",
+      "clientEducationGoalStatus": "&Client's Education Goal Status",
+      "clientSocialGoalStatus": "&Client's Social Goal Status",
+      "clientNutritionGoalStatus": "&Client's Nutrition Goal Status",
+      "clientMentalHealthGoalStatus": "&Client's Mental Health Goal Status"
     },
     "screenNames": {
       "viewClient": "&View Client",
