--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -190,8 +190,6 @@
         "goBack": "-Go Back",
         "when": "-When",
         "lastVisit": "-Last Visit",
-        "previousStep": "-Previous Step",
-        "nextStep": "-Next Step",
         "language": "-Language"
     },
     "alert": {
@@ -219,7 +217,8 @@
         "actionConfirmationNotice": "-Are you sure you want to {{action}} this {{object}}?",
         "loadingPriorityClientsError": "-Error loading priority clients",
         "loadingReferralsError": "-Error loading referrals",
-        "submitReferralError": "-An error occurred when submitting the referral"
+        "submitReferralError": "-An error occurred when submitting the referral",
+        "submitVisitError": "-Error occurred trying to submit the visit"
     },
     "admin": {
         "username": "-Username",
@@ -590,7 +589,19 @@
         "visitFocus": "-Visit Focus",
         "visit": "-Visit",
         "discardNewVisit": "-Discard this new visit?",
-        "clients": "-Client's"
+        "clients": "-Client's",
+        
+        "clientHealthGoal": "-Client's Health Goal",
+        "clientEducationGoal": "-Client's Education Goal",
+        "clientSocialGoal": "-Client's Social Goal",
+        "clientNutritionGoal": "-Client's Nutrition Goal",
+        "clientMentalHealthGoal": "-Client's Mental Health Goal",
+
+        "clientHealthGoalStatus": "-Client's Health Goal Status",
+        "clientEducationGoalStatus": "-Client's Education Goal Status",
+        "clientSocialGoalStatus": "-Client's Social Goal Status",
+        "clientNutritionGoalStatus": "-Client's Nutrition Goal Status",
+        "clientMentalHealthGoalStatus": "-Client's Mental Health Goal Status"
     },
     "screenNames": {
         "viewClient": "-View Client",
