feat(client list): translate strings

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -52,9 +52,12 @@
       "showArchived": "&Show Archived",
       "noVisits": "&No Visits",
       "noPriorityClients": "&No Priority Clients Found",
+      "noClients": "&No Clients found",
       "noOutstandingReferrals": "&No Outstanding Referrals Found",
       "newInboxMessages": "&You have <1>1</1> new message in your inbox",
-      "newInboxMessages_plural": "&You have <1>{{count}}</1> new messages in your inbox"    },
+      "newInboxMessages_plural": "&You have <1>{{count}}</1> new messages in your inbox",
+      "csvExport": "&EXPORT TO CSV"
+    },
     "disabilities": {
       "amputee": "&Amputee",
       "polio": "&Polio",
