--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -52,9 +52,11 @@
         "showArchived": "-Show Archived",
         "noVisits": "-No Visits",
         "noPriorityClients": "-No Priority Clients Found",
+        "noClients": "-No Clients found",
         "noOutstandingReferrals": "-No Outstanding Referrals Found",
         "newInboxMessages": "-You have <1>1</1> new message in your inbox",
-        "newInboxMessages_plural": "-You have <1>{{count}}</1> new messages in your inbox"
+        "newInboxMessages_plural": "-You have <1>{{count}}</1> new messages in your inbox",
+        "csvExport": "-EXPORT TO CSV"
     },
     "disabilities": {
         "amputee": "-Amputee",
@@ -590,7 +592,7 @@
         "visit": "-Visit",
         "discardNewVisit": "-Discard this new visit?",
         "clients": "-Client's",
-        
+
         "clientHealthGoal": "-Client's Health Goal",
         "clientEducationGoal": "-Client's Education Goal",
         "clientSocialGoal": "-Client's Social Goal",
