feat(stats page): translate strings

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -199,6 +199,7 @@
         "generalFailureTryAgain": "-Something went wrong. Please go back and try again.",
         "loadClientFailure": "-Something went wrong loading that client. Please try again.",
         "loadUserFailure": "-Something went wrong trying to load that user. Please go back and try again.",
+        "loadStatsFailure": "-Something went wrong loading the statistics. Please try again.",
         "editUserFailure": "-Something went wrong trying to edit that user. Please try again.",
         "editUserPasswordFailure": "-Error occurred when trying to change the user's password",
         "DeleteAlertWithSubject": "-Delete Alert with Subject: {{subject}}",
@@ -635,6 +636,8 @@
         "showingDataFor": "-Showing data for",
         "allZones": "-all zones",
         "viewAllZone": "-View All Zone",
+        "viewAllZones": "-View All Zones",
+        "viewAllZoneData": "-View data for all zones.",
         "byZone": "-By Zone",
         "totalVisits": "-Total Visits:",
         "clickBarToFilter": "-Click on bar to filter by zone",
@@ -644,7 +647,12 @@
         "resolved": "-Resolved",
         "allClients": "-All Clients",
         "activeClients": "-Active Clients",
-        "clientsWithDisabilities": "-Clients with Disabilities:"
+        "clientsWithDisabilities": "-Clients with Disabilities:",
+        "filtersDoNotApplyToDisabilities": "-Filters do not apply to disabilities.",
+        "clickForZoneSpecificData": "-For zone-specific data, click on a zone in the zone chart.",
+        "onlyZonesWithVisits": "-Only zones with visits are shown.",
+        "noVisitsFound": "-No visits found. If you are filtering, perhaps there were no visits during the date period selected or the user selected has not visited any clients yet.",
+        "count": "-Count"
     },
     "sync": {
         "sureResetLocalDB": "-Are you sure you want to reset local database",
