Feat(stats page): translate remaining strings

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -192,7 +192,10 @@
         "goBack": "-Go Back",
         "when": "-When",
         "lastVisit": "-Last Visit",
-        "language": "-Language"
+        "language": "-Language",
+        "csvExport": "-EXPORT TO CSV",
+        "clear": "-Clear",
+        "filter": "-Filter"
     },
     "alert": {
         "generalFailure": "-Something went Wrong",
@@ -652,7 +655,15 @@
         "clickForZoneSpecificData": "-For zone-specific data, click on a zone in the zone chart.",
         "onlyZonesWithVisits": "-Only zones with visits are shown.",
         "noVisitsFound": "-No visits found. If you are filtering, perhaps there were no visits during the date period selected or the user selected has not visited any clients yet.",
-        "count": "-Count"
+        "count": "-Count",
+        "filterByDate": "-Filter by Date",
+        "filterByUser": "-Filter by User",
+        "export": "-Export Statistics",
+        "filtersApplyToExports": "-Note that any filters will also apply to exported data.",
+        "downloadAsCSV": "-<1>Download statistics</1> as a CSV file.",
+        "allTime": "-All Time",
+        "allUsers": "-All Users",
+        "dateRange": "-From {{start}} to {{end}}"
     },
     "sync": {
         "sureResetLocalDB": "-Are you sure you want to reset local database",
