feat(alert inbox): translate strings

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -195,7 +195,8 @@
         "language": "-Language",
         "csvExport": "-EXPORT TO CSV",
         "clear": "-Clear",
-        "filter": "-Filter"
+        "filter": "-Filter",
+        "details": "-Details"
     },
     "alert": {
         "generalFailure": "-Something went Wrong",
@@ -259,7 +260,8 @@
         "errorUpdatingAlert": "-Encountered an error while trying to update the alert!",
         "errorDeletingAlert": "-Encountered an error while trying to delete the alert!",
         "errorRetrievingUser": "-Error retrieving users. {{error}}",
-        "apiLoadError": "-API Load Error"
+        "apiLoadError": "-API Load Error",
+        "selectAnAlert": "-Please select an alert."
     },
     "baseSurveyFields": {
         "client_id": "-Client",
