Feat(statistics): translate labels for inputs in modal

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -196,7 +196,9 @@
         "csvExport": "-EXPORT TO CSV",
         "clear": "-Clear",
         "filter": "-Filter",
-        "details": "-Details"
+        "details": "-Details",
+        "from": "-From",
+        "to": "-To"
     },
     "alert": {
         "generalFailure": "-Something went Wrong",
