--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -197,7 +197,9 @@
       "csvExport": "&EXPORT TO CSV",
       "clear": "&Clear",
       "filter": "&Filter",
-      "details": "&Details"
+      "details": "&Details",
+      "from": "&From",
+      "to": "&To"
   },
     "alert": {
       "generalFailure": "&Something went Wrong",
