feat(modal form): add both localized and canonical fields for displaying and saving to database respectively

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -572,6 +572,7 @@
       "health": "&Health",
       "education": "&Education",
       "social": "&Social",
+      "socialRequirements": ["&Organize an Event", "&Volunteer"],
       "nutrition": "&Nutrition",
       "mental": "&Mental",
       "improvements": "&Improvements",
