feat(modal form): translate values for modal form in client risk page

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -573,6 +573,7 @@
       "education": "&Education",
       "social": "&Social",
       "socialRequirements": ["&Organize an Event", "&Volunteer"],
+      "healthRequirements": ["&Improve Sleep Quality", "&Eat Healthy"],
       "nutrition": "&Nutrition",
       "mental": "&Mental",
       "improvements": "&Improvements",
