--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -576,8 +576,15 @@
         "nutrition": "-Nutrition",
         "mental": "-Mental",
         "improvements": "-Improvements",
+
+
         "socialRequirements": ["-Organize an Event", "-Volunteer"],
         "healthRequirements": ["-Improve Sleep Quality", "-Eat Healthy"],
+
+        "socialGoals": ["-social goal 1", "-social goal 2", "-social goal 3"],
+        "healthGoals": ["-health goal 1", "-health goal 2", "-health goal 3"],
+
+
         "outcomes": "-Outcomes",
         "description": "-Description",
         "outcome": "-Outcome",
