feat(modal form): add placeholder checkbox options gathered from database dump

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -578,11 +578,17 @@
         "improvements": "-Improvements",
 
 
-        "socialRequirements": ["-Organize an Event", "-Volunteer"],
-        "healthRequirements": ["-Improve Sleep Quality", "-Eat Healthy"],
+        "PLACEHOLDER-socialRequirements": ["-Improve connection with community", "-Improve connection with family", "-Be more social with others"],
+        "PLACEHOLDER-nutritionRequirements": ["-Obtain additional food supplies", "-Have a balanced diet"],
+        "PLACEHOLDER-mentalRequirements": ["-Recieve counselling", "-Recieve medication"],
+        "PLACEHOLDER-healthRequirements": ["-Recieve medication", "-Recieve wheelchair", "-Recieve crutches", "-Improve personal hygeine"],
+        "PLACEHOLDER-educationRequirements": ["-Recieve technical training", "-Enroll in a skills development course"],
 
-        "socialGoals": ["-social goal 1", "-social goal 2", "-social goal 3"],
-        "healthGoals": ["-health goal 1", "-health goal 2", "-health goal 3"],
+        "PLACEHOLDER-socialGoals": ["-Achieved", "-In progress", "-Not Achieved", "-No goals"],
+        "PLACEHOLDER-nutritionGoals": ["-Achieved", "-In progress", "-Not Achieved", "-No goals"],
+        "PLACEHOLDER-mentalGoals": ["-Achieved", "-In progress", "-Not Achieved", "-No goals"],
+        "PLACEHOLDER-healthGoals": ["-Achieved", "-In progress", "-Not Achieved", "-No goals"],
+        "PLACEHOLDER-educationGoals": ["-Achieved", "-In progress", "-Not Achieved", "-No goals"],
 
 
         "outcomes": "-Outcomes",
