Added new words to translations

--- a/common/src/locales/en.json
+++ b/common/src/locales/en.json
@@ -458,7 +458,8 @@
     "wheelchairInformation": "Wheelchair information",
     "whatDoesClientNeed": "What does the client need?",
     "describeReferral": "Please describe the referral",
-    "selectReferralServices": "Select referral services"
+    "selectReferralServices": "Select referral services",
+    "pending": "Pending Referrals"
   },
   "risks": {
     "riskLevel": "Risk Level",
