Added filter by referral types

--- a/common/src/locales/bari.json
+++ b/common/src/locales/bari.json
@@ -459,7 +459,8 @@
     "whatDoesClientNeed": "&What does the client need?",
     "describeReferral": "&Please describe the referral",
     "selectReferralServices": "&Select referral services",
-    "pending": "&Pending Referrals"
+    "pending": "&Pending Referrals",
+    "filterByType": "&Filter by Referral Types"
   },
   "risks": {
     "riskLevel": "Ngo' naron na gba da",
